--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 matrix:
   include:
     - language: go
+      before_install:
+         - curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh  
       before_script:
         - cd TrafficLight
       script:
