--- a/TrafficLight/Makefile
+++ b/TrafficLight/Makefile
@@ -1,2 +1,15 @@
+BINARY_NAME=trafficlight
+BINARY_UNIX=$(BINARY_NAME)_unix
+SOURCE_DIRECTORY=src
+
+all: deps test build
+build: 
+		cd $(SOURCE_DIRECTORY) && go build -o $(BINARY_NAME) -v
+test: 
+		go test -v ./...
+clean: 
+		cd $(SOURCE_DIRECTORY) && go clean && rm -f $(BINARY_NAME) && rm -f $(BINARY_UNIX)
 run:
-	cd src && dep ensure && go run *.go
+		cd $(SOURCE_DIRECTORY) && ./$(BINARY_NAME)
+deps:
+		cd $(SOURCE_DIRECTORY) && dep ensure
