--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/ClientApp/package.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/ClientApp/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^3.4.0",
+    "fsevents": "^1.2.7",
     "react": "^16.8.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.8.1",
@@ -11,7 +12,7 @@
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-router-redux": "^5.0.0-alpha.8",
-    "react-scripts": "1.0.17",
+    "react-scripts": "^2.1.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0",
     "rimraf": "^2.6.3"
@@ -21,5 +22,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
