--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
+# https://stackoverflow.com/questions/27644586/how-to-set-up-travis-ci-with-multiple-languages
+
 services:
-  - docker
-  
+  - docker  
+
 matrix:
   include:
     - language: go
@@ -11,20 +13,13 @@ matrix:
       script:
           - bash ../build-and-push-image-to-docker-hub.sh $TRAVIS_BUILD_NUMBER trafficsignal $DOCKER_HUB_USER $DOCKER_HUB_PASSWORD $TRAVIS_BRANCH
 
-    # https://stackoverflow.com/questions/27644586/how-to-set-up-travis-ci-with-multiple-languages
-    # - language: android
-    #   jdk: oraclejdk8
-    #   android:
-    #     components:
-    #       - tools
-    #       - android-25
-    #       - build-tools-25.0.3
-    #   before_script:
-    #     - cd android/AppName
-    #   script:
-    #     - ./gradlew build connectedCheck
+    - language: csharp
+      dotnet: 2.1.502
+      before_script:
+        - cd TrafficSignalsConfigurator
+      script:
+          - bash ../build-and-push-image-to-docker-hub.sh $TRAVIS_BUILD_NUMBER trafficsignalconfigurator $DOCKER_HUB_USER $DOCKER_HUB_PASSWORD $TRAVIS_BRANCH
 
-    
 
 notifications:
   email:
