--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/ClientApp/package.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/ClientApp/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^3.4.0",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.1",
     "react-bootstrap": "^0.31.5",
     "react-dom": "^16.8.1",
