A bit of cleanup

--- a/TrafficSignalsConfigurator/Dockerfile
+++ b/TrafficSignalsConfigurator/Dockerfile
@@ -15,7 +15,9 @@ WORKDIR /app
 
 COPY --from=build-env /app/output .
 
+ENV ASPNETCORE_ENVIRONMENT=Production
 ENV ASPNETCORE_URLS=http://+:5000
+
 EXPOSE 5000
 
 ENTRYPOINT ["dotnet", "TrafficSignalsConfigurator.Web.dll"]
