--- a/Kubernetes/src/mongoDb/minikube_hostpath.yaml
+++ b/Kubernetes/src/mongoDb/minikube_hostpath.yaml
@@ -1,7 +1,7 @@
 kind: StorageClass
 apiVersion: storage.k8s.io/v1
 metadata:
-  namespace: kube-system
+  namespace: threeamigos
   name: fast
   annotations:
     storageclass.beta.kubernetes.io/is-default-class: "true"
