--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.json
@@ -4,10 +4,5 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "TrafficSignalsConfiguratorDb": "mongodb://localhost:27017/TrafficSignalsConfiguratorDb;"
-  },
-  "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
-  "JWTLifespan": 2592000
+  "AllowedHosts": "*"
 }
