--- a/Kubernetes/src/trafficsignals-configurator.yaml
+++ b/Kubernetes/src/trafficsignals-configurator.yaml
@@ -10,17 +10,17 @@ spec:
         app: webapp
     spec:
       containers:
-      - image: gigapr/doggystuff:91
+      - image: threeamigos/trafficsignalconfigurator:150
         name: trafficsignals-configurator
         resources:
-      requests:
-        memory: "64Mi"
-        cpu: "250m"
-      limits:
-        memory: "128Mi"
-        cpu: "500m"
+          requests:
+            memory: "64Mi"
+            cpu: "250m"
+          limits:
+            memory: "128Mi"
+            cpu: "500m"
         ports:
-          - containerPort: 5050
+          - containerPort: 5001
 
 
 ---
@@ -28,13 +28,13 @@ apiVersion: v1
 kind: Service
 metadata:
   name: trafficsignals-configurator
-  namespace: namespace
+  namespace: threeamigos
 spec:
   type: NodePort
   ports:
-    - nodePort: 5050
-      port: 5050
+    - nodePort: 30000
+      port: 5001
       protocol: TCP
-      targetPort: 5050
+      targetPort: 5001
   selector:
     app: trafficsignals-configurator
