--- a/Kubernetes/src/mongodb/mongo-statefulset.yaml
+++ b/Kubernetes/src/mongodb/mongo-statefulset.yaml
@@ -18,6 +18,7 @@ apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
   name: mongo
+  namespace: threeamigos
 spec:
   serviceName: "mongo"
   replicas: 3
