--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Production.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Production.json
@@ -7,8 +7,9 @@
     }
   },
   "ConnectionStrings": {
-    "TrafficSignalsConfiguratorDb": "mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/TrafficSignalsConfigurator?replicaSet=trafficsignals-configurator"
+    "TrafficSignalsConfiguratorDb": "mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/TrafficSignalsConfigurator?connect=replicaSet"
   },
   "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
   "JWTLifespan": 2592000
 }
+
