Updated connection string

--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Production.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Production.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "TrafficSignalsConfiguratorDb": "mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/TrafficSignalsConfigurator?connect=replicaSet"
+    "TrafficSignalsConfiguratorDb": "mongodb://admin:abc123changeme@mongod-0.mongodb-service:27017,mongod-1.mongodb-service:27017,mongod-2.mongodb-service:27017/dbname_TrafficSignalsConfigurator?connect=replicaSet"
   },
   "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
   "JWTLifespan": 2592000
