--- a/Kubernetes/src/4_trafficsignals-configurator.yaml
+++ b/Kubernetes/src/4_trafficsignals-configurator.yaml
@@ -24,6 +24,20 @@ spec:
             cpu: "500m"
         ports:
           - containerPort: 5000
+        readinessProbe:
+          httpGet:
+            path: /metrics
+            port: 5000
+          initialDelaySeconds: 5
+          timeoutSeconds: 1
+          periodSeconds: 15
+        livenessProbe:
+          httpGet:
+            path: /metrics
+            port: 5000
+          initialDelaySeconds: 15
+          timeoutSeconds: 1
+          periodSeconds: 15
 
 ---
 apiVersion: v1
