Added event store

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,11 @@ matrix:
       script:
           - bash ../build-and-push-image-to-docker-hub.sh $TRAVIS_BUILD_NUMBER trafficsignalconfigurator $DOCKER_HUB_USER $DOCKER_HUB_PASSWORD $TRAVIS_BRANCH
 
+    - before_script:
+        - cd EventStore
+      script:
+          - bash ../build-and-push-image-to-docker-hub.sh $TRAVIS_BUILD_NUMBER eventstore $DOCKER_HUB_USER $DOCKER_HUB_PASSWORD $TRAVIS_BRANCH
+
 
 notifications:
   email:
