--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Production.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Production.json
@@ -10,6 +10,7 @@
     "TrafficSignalsConfiguratorDb": "mongodb://mongo-0.mongo:27017,mongo-1.mongo:27017,mongo-2.mongo:27017/TrafficSignalsConfigurator?connect=replicaSet"
   },
   "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
-  "JWTLifespan": 43200
+  "JWTLifespan": 43200,
+  "RabbitMqConnectionstring": "amqp://guest:guest@192.168.99.100:30672"
 }
 
