--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.json
@@ -4,5 +4,6 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "RabbitMqEventsExchange": "threeamigos.events.fanout.exchange"
 }
