--- a/Kubernetes/src/6_rabbitmq_statefulsets.yml
+++ b/Kubernetes/src/6_rabbitmq_statefulsets.yml
@@ -69,7 +69,7 @@ data:
       ## Set to "hostname" to use pod hostnames.
       ## When this value is changed, so should the variable used to set the RABBITMQ_NODENAME
       ## environment variable.
-      cluster_formation.k8s.address_type = ip
+      cluster_formation.k8s.address_type = hostname
       ## How often should node cleanup checks run?
       cluster_formation.node_cleanup.interval = 30
       ## Set to false if automatic removal of unknown/absent nodes
