--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Domain/TrafficSignalsConfigurator.Domain.csproj
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Domain/TrafficSignalsConfigurator.Domain.csproj
@@ -5,13 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <!-- <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" /> -->
     <PackageReference Include="MongoDB.Driver" Version="2.7.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.1" />
     <PackageReference Include="Paramore.Darker" Version="1.1.0" />
     <PackageReference Include="CryptoHelper" Version="2.2.0" />
     <PackageReference Include="Paramore.Brighter.AspNetCore" Version="1.0.13" />
     <PackageReference Include="Paramore.Brighter.Extensions.DependencyInjection" Version="1.0.3" />
     <PackageReference Include="Paramore.Darker.AspNetCore" Version="1.1.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
   </ItemGroup>
   
 </Project>
