--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/TrafficSignalsConfigurator.Web.csproj
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/TrafficSignalsConfigurator.Web.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Paramore.Brighter.Extensions.DependencyInjection" Version="1.0.3" />
     <PackageReference Include="Paramore.Darker.AspNetCore" Version="1.1.2" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="3.0.3" />
+    <PackageReference Include="RabbitMQ.Client" Version="5.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUi" Version="4.0.1" />
   </ItemGroup>
