--- a/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Development.json
+++ b/TrafficSignalsConfigurator/src/TrafficSignalsConfigurator.Web/appsettings.Development.json
@@ -10,5 +10,7 @@
     "TrafficSignalsConfiguratorDb": "mongodb://localhost:27017/TrafficSignalsConfiguratorDb;"
   },
   "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
-  "JWTLifespan": 2592000
+  "JWTLifespan": 2592000,
+  "RabbitMqConnectionstring": "amqp://guest:guest@192.168.99.100:30672",
+  "EventStoreUrl": "http://localhost:4000"
 }
