--- a/TrafficSignalsConfigurator.EventsHandlers/src/TrafficSignalsConfigurator.EventsHandlers.Console/appsettings.json
+++ b/TrafficSignalsConfigurator.EventsHandlers/src/TrafficSignalsConfigurator.EventsHandlers.Console/appsettings.json
@@ -9,5 +9,5 @@
   "ConnectionStrings": {
     "TrafficSignalsConfiguratorDb": "mongodb://localhost:27017/TrafficSignalsConfiguratorDb;"
   },
-  "RabbitMqConnectionstring": "amqp://guest:guest@192.168.99.100:30672/"
+  "RabbitMqConnectionstring": "amqp://guest:guest@localhost:5672/"
 }
